--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta
       name="description"
       content="Web site created using create-react-app" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/img/logo.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/img/favicon.ico" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
