--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta
       name="description"
       content="Web site created using create-react-app" />
+    <link rel="icon" href="%PUBLIC_URL%/img/favicon.ico" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/img/favicon.ico" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -22,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>컴퓨터공학부 세미나실 예약</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
