change meta content

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app" />
+      content="한국외국어대학교 컴퓨터공학부 세미나실 예약 시스템 입니다." />
     <link rel="icon" href="%PUBLIC_URL%/img/favicon.ico" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/img/favicon.ico" />
     <!--
